$Id$

2003.02.25 [Benjamin]
 * GMenu new methods
 * Support for mnemonic in labels.

2003.02.25
 * copy_block_indirected allocates in old generation
 * disable compaction in gtkMain.ml
 * copy young strings to the stack when needed
 * free lists obtained from Gtk

2003.02.24
 * replace alloc_final by alloc_custom (wrapper.h)
 * better gtk-2.0 support (ml_gdk.c)

2003.02.21
 * Support for GTK 2.0 and librsvg 2.0 compilation (O. Andrieu) [Benjamin]
 

In lablgtk2-20030221:

2003.02.21
 * add GObj.misc_ops#set_size_chars
 * applications/browser only works with CVS version of ocaml
 * bug fixes

2003.02.20
 * additions to Pango [Jacques]
[Benjamin]:
 * added set_stock to GMisc.image
 * In GMisc.label_skel : 
	added : #set_markup #set_markup_with_mnemonic #label
	changed : semantic of #text (returns text with markups and mnemonics)
		old semantic available with #label.
 * In GText.iter : add #language

2003.02.19
 * GdkDrawable is also a GObject
 * split GText.iter/nocopy_iter (Benjamin)
 * finish split (Jacques)

2003.02.14
 * Added librsvg support (contributed by Olivier Andrieu)
 * Ported applications/browser
 * GText.iter#forward/backward return self

2003.02.13
 * Starting to add GtkTreeView. See tree2.ml.

2003.02.12
 * API changes and bug fixes in GText (Jacques)

2003.02.11
 * API changes in GText (Jacques)
 * Many bug fix in GText (Benjamin)

In lablgtk2-20030210:

2003.02.10
 * merge trunk
 * Add gtkgl-2.0 and libglade-2.0 support

2003.01.22
 * Support for interaction between GtkTextBuffer and GtkClipboard. (Benjamin)
 * Support for search functions in GtkTextIter. (Benjamin)

2002.01.16
 * fix memory management in ml_gdk.h
 * GObject and GtkObject are different! fix gtk.ml

2002.01.15
  * added GtkAccelGroup and GtkClipboard support (Jacques)
  * suppress Gdk.Tags.selection (use Gdk.Atom.primary/secondary/clipboard)
  * time is 32-bit! (Benjamin)

In lablgtk2-alpha:

2002.12.26
  * lots of changes to adapt to gtk2